force-app/main/default/objects/User_Campaign__c/User_Campaign__c.object-meta.xml
<CustomObject>
    <label>User Campaign</label>
    <nameField>
        <label>User Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>