force-app/main/default/objects/User_Campaign__c/recordTypes/Analyst.recordType-meta.xml
<RecordType>
    <fullName>Analyst</fullName>
    <active>true</active>
    <label>Analyst</label>
</RecordType>