force-app/main/default/objects/User_Campaign__c/recordTypes/Analyst_Role.recordType-meta.xml
<RecordType>
    <fullName>Analyst_Role</fullName>
    <active>true</active>
    <description>Authorized user assigned to “Analyst” role.</description>
    <label>Analyst Role</label>
</RecordType>