force-app/main/default/objects/User_Campaign__c/recordTypes/Analyst_User.recordType-meta.xml
<RecordType>
    <fullName>Analyst_User</fullName>
    <active>true</active>
    <description>User with &quot;Analyst&quot; role.</description>
    <label>Analyst User</label>
</RecordType>