force-app/main/default/objects/User_Campaign__c/recordTypes/Configurator.recordType-meta.xml
<RecordType>
    <fullName>Configurator</fullName>
    <active>true</active>
    <label>Configurator</label>
</RecordType>