force-app/main/default/objects/User_Campaign__c/recordTypes/Configurator_Role.recordType-meta.xml
<RecordType>
    <fullName>Configurator_Role</fullName>
    <active>true</active>
    <description>Authorized user assigned to “Configurator” role.</description>
    <label>Configurator Role</label>
</RecordType>