force-app/main/default/objects/User_Campaign__c/recordTypes/Configurator_User.recordType-meta.xml
<RecordType>
    <fullName>Configurator_User</fullName>
    <active>true</active>
    <description>User with &quot;Configurator&quot; role.</description>
    <label>Configurator User</label>
</RecordType>