force-app/main/default/objects/User_Campaign__c/recordTypes/Moderator.recordType-meta.xml
<RecordType>
    <fullName>Moderator</fullName>
    <active>true</active>
    <label>Moderator</label>
</RecordType>