force-app/main/default/objects/User_Campaign__c/recordTypes/Moderator_Role.recordType-meta.xml
<RecordType>
    <fullName>Moderator_Role</fullName>
    <active>true</active>
    <description>Authorized user assigned to “Moderator” role.</description>
    <label>Moderator Role</label>
</RecordType>