force-app/main/default/objects/User_Campaign__c/recordTypes/Moderator_User.recordType-meta.xml
<RecordType>
    <fullName>Moderator_User</fullName>
    <active>true</active>
    <description>User with &quot;Moderator&quot; role.</description>
    <label>Moderator User</label>
</RecordType>