force-app/main/default/objects/User_Campaign__c/recordTypes/Voter.recordType-meta.xml
<RecordType>
    <fullName>Voter</fullName>
    <active>true</active>
    <label>Voter</label>
</RecordType>