force-app/main/default/objects/User_Campaign__c/recordTypes/Voter_Role.recordType-meta.xml
<RecordType>
    <fullName>Voter_Role</fullName>
    <active>true</active>
    <description>Authorized user assigned to “Voter” role.</description>
    <label>Voter Role</label>
</RecordType>