force-app/main/default/objects/User_Campaign__c/recordTypes/Voter_User.recordType-meta.xml
<RecordType>
    <fullName>Voter_User</fullName>
    <active>true</active>
    <description>User with &quot;Voter&quot; role.</description>
    <label>Voter User</label>
</RecordType>